Fixing scrollbars with Firefox

--- a/client/idrepo/common-ui/src/main/resources/META-INF/resources/ui-commons/css/syncopeUI.scss
+++ b/client/idrepo/common-ui/src/main/resources/META-INF/resources/ui-commons/css/syncopeUI.scss
@@ -1150,9 +1150,7 @@ div#tablehandling ul.menu li a {
 
 @-moz-document url-prefix(''){
   .palette-scrollbar {
-    min-width: 100%;
-    width: auto;
-    overflow: scroll;
+    width: auto !important;
   }
 }
 
