--- a/client/idrepo/enduser/src/main/resources/META-INF/resources/css/syncopeEnduser.css
+++ b/client/idrepo/enduser/src/main/resources/META-INF/resources/css/syncopeEnduser.css
@@ -1173,9 +1173,7 @@ div#tablehandling ul.menu li a {
 
 @-moz-document url-prefix(''){
   .palette-scrollbar {
-    min-width: 100%;
-    width: auto;
-    overflow: scroll;
+    width: auto !important;
   }
 }
 
